--- a/style.css
+++ b/style.css
@@ -1,10 +1,4 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    letter-spacing: .5px;
 
-}
 
 .page-wrapper{
     display: flex;
@@ -18,6 +12,7 @@
     width: 300px;
     height: 300px;
 }
+
 .side2{
     width: 40%;
 }
@@ -33,4 +28,36 @@ li{
 
 p{
     line-height: 1.5em;
+}
+.name{
+    display: block;
+}
+
+.linkedin{
+        padding: 1px 6px;
+        border: 1px outset buttonborder;
+        border-radius: 3px;
+        color: #E5E4E2;
+        background-color: black;
+        text-decoration: none;
+}
+.linkedin1{
+    padding: 1px 6px;
+    border: 1px outset buttonborder;
+    border-radius: 3px;
+    color: #E5E4E2;
+    background-color: black;
+    text-decoration: none;
+}
+.linkedin2{
+    padding: 1px 6px;
+    border: 1px outset buttonborder;
+    border-radius: 3px;
+    color: #E5E4E2;
+    background-color: black;
+    text-decoration: none;
+}
+.wrapper1{
+    width: 0px;
+    height:470px;
 }
