--- a/style.css
+++ b/style.css
@@ -1,63 +1,220 @@
-
-
-.page-wrapper{
-    display: flex;
-    max-width: 1500px;
-    justify-content: center;
-    justify-content: space-evenly;
-    height: 100vh;
-    padding: 50px;
+/*
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-.profile-pic{
+
+body {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    background-color: #f4f4f4;
+    color: #333;
+    padding: 0 20px;
+}
+*/
+header {
+    text-align: left;
+    margin-top: 50px;
+    margin-left: 40px;
+}
+.button-group button {
+    padding: 10px 15px; /* Increased padding */
+    font-size: 18px;    /* Increased font size */
+    cursor: pointer;
+    background-color: #36a2eb33;
+    color: black;
+    border: none;
+    border-radius: 5px;
+}
+.button-group {
+    position: absolute;
+    top: 50px;         /* Distance from the top */
+    right: 20px;       /* Distance from the right */
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+header h1 {
+    font-size: 2.5em;
+    color: #333;
+}
+
+header p {
+    font-size: 1.2em;
+    color: #666;
+}
+
+#about {
+    display: flex;
+    align-items: center;
+    margin-top: 50px;
+}
+
+.profile-photo img {
+    border-radius: 50%;
+    height: 300px;
     width: 300px;
     height: 300px;
+    object-fit: cover;
 }
 
-.side2{
-    width: 40%;
+.bio {
+    margin-left: 30px;
 }
-.wrapper{
+
+.bio h2 {
+    font-size: 1.8em;
     margin-bottom: 10px;
 }
-h1{
-    margin-bottom: 10px;
+
+.bio p {
+    font-size: 1.1em;
 }
-li{
+
+.bio h3 {
+    margin-top: 20px;
+}
+
+.bio ul {
     list-style: none;
+    margin-top: 10px;
 }
 
-p{
-    line-height: 1.5em;
-}
-.name{
-    display: block;
+.bio ul li {
+    background-color: #e7f3ff;
+    padding: 8px;
+    margin-bottom: 5px;
+    border-radius: 5px;
 }
 
-.linkedin{
-        padding: 1px 6px;
-        border: 1px outset buttonborder;
-        border-radius: 3px;
-        color: #E5E4E2;
-        background-color: black;
-        text-decoration: none;
+#projects {
+    margin-top: 80px;
 }
-.linkedin1{
-    padding: 1px 6px;
-    border: 1px outset buttonborder;
-    border-radius: 3px;
-    color: #E5E4E2;
-    background-color: black;
+
+#projects h2 {
+    font-size: 1.8em;
+    margin-bottom: 20px;
+}
+
+.project-card {
+    background-color: #fff;
+    padding: 20px;
+    margin-bottom: 15px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.project-card h3 {
+    font-size: 1.4em;
+}
+
+footer {
+    text-align: center;
+    margin-top: 50px;
+}
+
+footer p {
+    font-size: 1.2em;
+    margin-bottom: 10px;
+}
+
+footer ul {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+}
+
+footer ul li {
+    margin: 0 10px;
+}
+
+footer ul li a {
     text-decoration: none;
+    color: #0073e6;
+    font-size: 1.2em;
 }
-.linkedin2{
-    padding: 1px 6px;
-    border: 1px outset buttonborder;
-    border-radius: 3px;
-    color: #E5E4E2;
-    background-color: black;
-    text-decoration: none;
+
+#chart{
+    display: flex;
+    align-items: center;
+    margin-top: 50px;
+    height: 100px;
 }
-.wrapper1{
-    width: 0px;
-    height:470px;
+.skill1{
+    padding-left: 120px;
+    padding-top: 20px;
+    display: flex;
+}
+
+
+.timeline {
+	width:930px;
+	height: 20px;
+	list-style: none;
+	text-align: justify;
+    margin: 0 auto;
+    width: 65%;
+    padding: 0;
+	margin-left: 420px;
+    margin-top: -200px;
+    margin-bottom: 170px;
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,0)), color-stop(45%, rgba(255,255,255,0)), color-stop(51%, black), color-stop(57%, rgba(255,255,255,0)), color-stop(100%, rgba(255,255,255,0)));
+	background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 45%, black 51%, rgba(255,255,255,0) 57%, rgba(255,255,255,0) 100%);
+}
+
+.timeline:after {display: inline-block; content: ""; width: 100%;}
+
+.timeline li {
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+	background:#36a2eb33;
+	text-align: center;
+	line-height: 1.2;
+	position: relative;
+	border-radius: 50%;
+}
+
+.timeline li:before {
+	display: inline-block;
+	content: attr(data-month) "-" attr(data-year);
+	font-size: 26px;
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+}
+
+.timeline li:nth-child(odd):before {
+	top: -40px;
+}
+.timeline li:nth-child(even):before {
+	bottom: -40px;
+}
+
+.timeline li:after {
+	display: inline-block;
+	content: attr(data-text);
+	font-size: 16px;
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+}
+
+.timeline li:nth-child(odd):after {
+	bottom: 0;
+	margin-bottom: -10px;
+	transform: translate(-50%, 100%);
+}
+.timeline li:nth-child(even):after {
+	top: 0;
+	margin-top: -10px;
+	transform: translate(-50%, -100%);
+}
+
+
+#h21 {
+    font-size: 2em;
+    margin-bottom: 20px; /* Space between title and timeline */
+    text-align: center;
 }
